# grpx

./: README.md  pyproject.toml
docs/: architecture.md
src/grpx/: __init__.py  cli.py  config.py  detectors.py  executor.py  file_stream.py
src/grpx/providers/: __init__.py  base.py  claude.py  factory.py  ollama.py  openai.py  openrouter.py
src/grpx/threat_intel/: __init__.py  clients.py  service.py
tests/: test_cli.py  test_config.py  test_provider_errors.py  test_providers.py  test_threat_intel.py
